tests/NormalTests/paczka1/small_fuzzy/74767477.err
Error in line 3: EJsNW0ooj1 A909 88,1
Error in line 4: EJsNW0ooj1 S785 86,0
Error in line 13: 7wFq S785 15,2
Error in line 16: 7wFq S881 -1,8
